attempt to add update method

--- a/views/users/user_list.ejs
+++ b/views/users/user_list.ejs
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 </head>
 
-<body class="bg">
+<body>
   <div class="container-fluid mt-2">
     <table class="table table-info table-striped table-hover">
       <thead>
