added Update Method and adjusted them

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -21,7 +21,7 @@
     <div class="navbar navbar-expand-sm">
         <div class="container-fluid">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="#">
+                <li class="nav-item"><a class="nav-link" href="/">
                         <p class="menu-1">
                             < </p> </a> </li> <li class="nav-item"><a class="nav-link" href="#"><img
                                         src="/assets/assets-CH4/logo 1.png" alt="" class="menu-2"></a></li>
