--- a/views/users/user_list.ejs
+++ b/views/users/user_list.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Users and their Biodatas</title>
+  <title>Users and Bios </title>
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 </head>
@@ -22,7 +22,6 @@
       <tbody>
         <% userList.forEach(function(list) { %>
             <tr>
-                <th scope="row"></th>
                 <td><%= list.name %></td>
                 <td><%= list.description %></td>
             </tr>
