--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,6 +15,7 @@
 
 <body>
   <div class="container justify-content-center col-5 mt-5">
+    <a href="/" class="btn btn-info btn-close"></a><br><br>
     <form action="/register" method="post">
       <div class="mb-3 ">
         <label class="form-label">Username</label>
@@ -32,6 +33,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <a href="/user_update">Click here to change your information</a>
   </div>
 
 
