--- a/views/users/user_update.ejs
+++ b/views/users/user_update.ejs
@@ -13,18 +13,18 @@
 <body>
     
   <div class="container">
-    <a href="#" class="btn btn-info btn-close"></a>
+    <a href="/" class="btn btn-info btn-close"></a>
     <form action="/user_update" method="post">
 
       <div class="row mt-lg-4">
         <div class="col-4">
           <p>Enter current Email and password to continue!</p>
-          <input type="text" class="form-control" placeholder="Enter email" name="emailPrev">
+          <input type="email" class="form-control" placeholder="Enter email" name="emailPrev">
         </div>
         <div class="col-2"></div>
         <div class="col-4">
           <p>Enter your updated information here!</p>
-          <input type="text" class="form-control" placeholder="Enter email" name="emailNext">
+          <input type="email" class="form-control" placeholder="Enter email" name="emailNext">
         </div>
       </div>
 
@@ -35,6 +35,14 @@
         <div class="col-2"></div>
         <div class="col-4">
           <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="passwordNext">
+        </div>
+      </div>
+
+      <div class="row mt-lg-4">
+        <div class="col-4"></div>
+        <div class="col-2"></div>
+        <div class="col-4">
+          <input type="text" class="form-control" placeholder="Enter your new username" name="username">
         </div>
       </div>
 
