--- a/views/users/user_update.ejs
+++ b/views/users/user_update.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form</title>
+  <title>Update Form</title>
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 </head>
@@ -39,7 +39,11 @@
       </div>
 
       <div class="row mt-lg-4">
-        <div class="col-4"></div>
+        <div class="col-4">
+          <a href="/user_delete">
+            Click here to delete your account
+          </a>
+        </div>
         <div class="col-2"></div>
         <div class="col-4">
           <input type="text" class="form-control" placeholder="Enter your new username" name="username">
